# blog

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  apps.py  mixins.py  models.py  permissions.py  pyproject.toml  requirements.txt  urls.py
.github/workflows/: black.yml  django.yml  ruff.yml
ai/: __init__.py  serializers.py  views.py
ai/recsys/: __init__.py  apps.py  views.py
ai/tests/: test_views.py
ai/utils/: __init__.py  text.py
articles/: models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_initial.py  0003_article_comments_article_reactions.py  0004_alter_article_tags.py  0005_article_stargazers.py
articles/tests/: __init__.py  test_models.py  test_views.py
blog/: __init__.py
blog/ai/: apps.py  serializers.py  views.py
categories/: __init__.py  apps.py  models.py  serializers.py  views.py
comments/: __init__.py  models.py  serializers.py  urls.py  views.py
followers/: apps.py  models.py  urls.py  views.py
forms/: base.py  create.py  edit.py  main.py
migrations/: 0001_initial.py  0002_post_image_alter_bloguser_image.py
reactions/: models.py  serializers.py  urls.py  views.py
recsys/: apps.py  views.py
reports/: apps.py  serializers.py  urls.py  views.py
scripts/: __init__.py  makerecs.py
tags/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
tests/: __init__.py  test_mixins.py  test_permissions.py
users/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
views/: create.py  delete.py  detail.py  edit.py  generic.py  list.py  main.py  mixins.py
(+132 files in other folders)
